; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_fastcgi.c_fcgi_hash_set.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_fastcgi.c_fcgi_hash_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__*, %struct.TYPE_7__**, %struct.TYPE_6__* }
%struct.TYPE_7__ = type { i32, i32, i32, i8*, i8*, %struct.TYPE_7__*, %struct.TYPE_7__* }
%struct.TYPE_6__ = type { i32, %struct.TYPE_7__*, %struct.TYPE_6__* }

@FCGI_HASH_TABLE_MASK = common dso_local global i32 0, align 4
@FCGI_HASH_TABLE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_8__*, i32, i8*, i32, i8*, i32)* @fcgi_hash_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @fcgi_hash_set(%struct.TYPE_8__* %0, i32 %1, i8* %2, i32 %3, i8* %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_7__*, align 8
  %16 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store i32 %5, i32* %13, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* @FCGI_HASH_TABLE_MASK, align 4
  %19 = and i32 %17, %18
  store i32 %19, i32* %14, align 4
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 1
  %22 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %21, align 8
  %23 = load i32, i32* %14, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %22, i64 %24
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %25, align 8
  store %struct.TYPE_7__* %26, %struct.TYPE_7__** %15, align 8
  br label %27

27:                                               ; preds = %69, %6
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %29 = icmp ne %struct.TYPE_7__* %28, null
  %30 = zext i1 %29 to i32
  %31 = call i64 @UNEXPECTED(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %73

33:                                               ; preds = %27
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* %9, align 4
  %38 = icmp eq i32 %36, %37
  %39 = zext i1 %38 to i32
  %40 = call i64 @UNEXPECTED(i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %69

42:                                               ; preds = %33
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %11, align 4
  %47 = icmp eq i32 %45, %46
  br i1 %47, label %48, label %69

48:                                               ; preds = %42
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 4
  %51 = load i8*, i8** %50, align 8
  %52 = load i8*, i8** %10, align 8
  %53 = load i32, i32* %11, align 4
  %54 = call i64 @memcmp(i8* %51, i8* %52, i32 %53)
  %55 = icmp eq i64 %54, 0
  br i1 %55, label %56, label %69

56:                                               ; preds = %48
  %57 = load i32, i32* %13, align 4
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 2
  store i32 %57, i32* %59, align 8
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %61 = load i8*, i8** %12, align 8
  %62 = load i32, i32* %13, align 4
  %63 = call i8* @fcgi_hash_strndup(%struct.TYPE_8__* %60, i8* %61, i32 %62)
  %64 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %65 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %64, i32 0, i32 3
  store i8* %63, i8** %65, align 8
  %66 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %67 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %66, i32 0, i32 3
  %68 = load i8*, i8** %67, align 8
  store i8* %68, i8** %7, align 8
  br label %164

69:                                               ; preds = %48, %42, %33
  %70 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %71 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %70, i32 0, i32 6
  %72 = load %struct.TYPE_7__*, %struct.TYPE_7__** %71, align 8
  store %struct.TYPE_7__* %72, %struct.TYPE_7__** %15, align 8
  br label %27

73:                                               ; preds = %27
  %74 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %75 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %74, i32 0, i32 2
  %76 = load %struct.TYPE_6__*, %struct.TYPE_6__** %75, align 8
  %77 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %76, i32 0, i32 0
  %78 = load i32, i32* %77, align 8
  %79 = load i32, i32* @FCGI_HASH_TABLE_SIZE, align 4
  %80 = icmp sge i32 %78, %79
  %81 = zext i1 %80 to i32
  %82 = call i64 @UNEXPECTED(i32 %81)
  %83 = icmp ne i64 %82, 0
  br i1 %83, label %84, label %97

84:                                               ; preds = %73
  %85 = call i64 @malloc(i32 24)
  %86 = inttoptr i64 %85 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %86, %struct.TYPE_6__** %16, align 8
  %87 = load %struct.TYPE_6__*, %struct.TYPE_6__** %16, align 8
  %88 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %87, i32 0, i32 0
  store i32 0, i32* %88, align 8
  %89 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %90 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %89, i32 0, i32 2
  %91 = load %struct.TYPE_6__*, %struct.TYPE_6__** %90, align 8
  %92 = load %struct.TYPE_6__*, %struct.TYPE_6__** %16, align 8
  %93 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %92, i32 0, i32 2
  store %struct.TYPE_6__* %91, %struct.TYPE_6__** %93, align 8
  %94 = load %struct.TYPE_6__*, %struct.TYPE_6__** %16, align 8
  %95 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %96 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %95, i32 0, i32 2
  store %struct.TYPE_6__* %94, %struct.TYPE_6__** %96, align 8
  br label %97

97:                                               ; preds = %84, %73
  %98 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %99 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %98, i32 0, i32 2
  %100 = load %struct.TYPE_6__*, %struct.TYPE_6__** %99, align 8
  %101 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %100, i32 0, i32 1
  %102 = load %struct.TYPE_7__*, %struct.TYPE_7__** %101, align 8
  %103 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %104 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %103, i32 0, i32 2
  %105 = load %struct.TYPE_6__*, %struct.TYPE_6__** %104, align 8
  %106 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %105, i32 0, i32 0
  %107 = load i32, i32* %106, align 8
  %108 = sext i32 %107 to i64
  %109 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %102, i64 %108
  store %struct.TYPE_7__* %109, %struct.TYPE_7__** %15, align 8
  %110 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %111 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %110, i32 0, i32 2
  %112 = load %struct.TYPE_6__*, %struct.TYPE_6__** %111, align 8
  %113 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %112, i32 0, i32 0
  %114 = load i32, i32* %113, align 8
  %115 = add nsw i32 %114, 1
  store i32 %115, i32* %113, align 8
  %116 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %117 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %116, i32 0, i32 1
  %118 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %117, align 8
  %119 = load i32, i32* %14, align 4
  %120 = zext i32 %119 to i64
  %121 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %118, i64 %120
  %122 = load %struct.TYPE_7__*, %struct.TYPE_7__** %121, align 8
  %123 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %124 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %123, i32 0, i32 6
  store %struct.TYPE_7__* %122, %struct.TYPE_7__** %124, align 8
  %125 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %126 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %127 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %126, i32 0, i32 1
  %128 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %127, align 8
  %129 = load i32, i32* %14, align 4
  %130 = zext i32 %129 to i64
  %131 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %128, i64 %130
  store %struct.TYPE_7__* %125, %struct.TYPE_7__** %131, align 8
  %132 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %133 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %132, i32 0, i32 0
  %134 = load %struct.TYPE_7__*, %struct.TYPE_7__** %133, align 8
  %135 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %136 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %135, i32 0, i32 5
  store %struct.TYPE_7__* %134, %struct.TYPE_7__** %136, align 8
  %137 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %138 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %139 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %138, i32 0, i32 0
  store %struct.TYPE_7__* %137, %struct.TYPE_7__** %139, align 8
  %140 = load i32, i32* %9, align 4
  %141 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %142 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %141, i32 0, i32 0
  store i32 %140, i32* %142, align 8
  %143 = load i32, i32* %11, align 4
  %144 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %145 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %144, i32 0, i32 1
  store i32 %143, i32* %145, align 4
  %146 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %147 = load i8*, i8** %10, align 8
  %148 = load i32, i32* %11, align 4
  %149 = call i8* @fcgi_hash_strndup(%struct.TYPE_8__* %146, i8* %147, i32 %148)
  %150 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %151 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %150, i32 0, i32 4
  store i8* %149, i8** %151, align 8
  %152 = load i32, i32* %13, align 4
  %153 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %154 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %153, i32 0, i32 2
  store i32 %152, i32* %154, align 8
  %155 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %156 = load i8*, i8** %12, align 8
  %157 = load i32, i32* %13, align 4
  %158 = call i8* @fcgi_hash_strndup(%struct.TYPE_8__* %155, i8* %156, i32 %157)
  %159 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %160 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %159, i32 0, i32 3
  store i8* %158, i8** %160, align 8
  %161 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %162 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %161, i32 0, i32 3
  %163 = load i8*, i8** %162, align 8
  store i8* %163, i8** %7, align 8
  br label %164

164:                                              ; preds = %97, %56
  %165 = load i8*, i8** %7, align 8
  ret i8* %165
}

declare dso_local i64 @UNEXPECTED(i32) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #1

declare dso_local i8* @fcgi_hash_strndup(%struct.TYPE_8__*, i8*, i32) #1

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
